--- a/Index.html
+++ b/Index.html
@@ -2,4 +2,22 @@
 <html lang="pt-BR">
   <head>
     <meta charset=UFT-8">
-    <meta name="viewport" content= width
+    <meta name="viewport" content= width=device-width, intial-scale=1.0>
+    <title>Trabalho de História</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <!-- Cabeçalho -->
+    <header class="header">
+      Cabeçalho: Trabalho de História 
+    </header>
+
+    <!-- Corpo Principal -->
+    <main class="titulo-trabalho" -->
+      <!-- Div "titulo-trabalho" -->
+      <div class="titulo-trabalho">
+        Titulo do Trabalho
+      </div>
+
+      <!-- Div para o resumo e vídeo -->
+  
