--- a/Index.html
+++ b/Index.html
@@ -20,4 +20,11 @@
       </div>
 
       <!-- Div para o resumo e vídeo -->
+      <header class="resumo-video">
+        <!-- Div "resumo-texto" como o texto "Resumo com 5 linhas" -->
+        <div class="resumo-texto">
+          Resumo com 5 linhas
+        </div>
+
+        
   
